[patch] fix event list cutoff (#46)

--- a/components/home/events-section.module.scss
+++ b/components/home/events-section.module.scss
@@ -30,7 +30,7 @@
   transition: 300ms ease-in-out;
 
   &.expanded {
-    max-height: 62.5rem;
+    max-height: 150rem;
   }
 }
 
